@@ -1,25 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
+AUX 50dictionary-gentoo-1.10.el 63 SHA256 e7198f0db42f21158c9bc76415e1b11cab099da6a8f990d942832fe300b85fcc SHA512 2565c135f51cc6fedd38da6355471728335bad88f5723a988e988e6963f61e1dcbd8afd8db62c691ca63521eb85213c65935efa7e216d32d75baec32db0ee326 WHIRLPOOL c6748b6dded46dc63d31814a19681a41ba761fc269f4d6029f0a198afcba64c76c02f7130d4ef1dd4483ba93ebb62144b207b523dbd4a2ee4f87ef302eb55289
 AUX 50dictionary-gentoo.el 199 SHA256 4cfa76f00322f8e2bbc375605cef7146184f5bcb02da959d03c43c0f6c01a658 SHA512 68dd3c004af108b345dc7d020617128657c816a1ac4d114870b0e637f78d392e6d64d2dadadb4bdb800ba42a98fa489ddab9b372a86c79f12e9618b6fe003c1f WHIRLPOOL 9a182e3c4eee244e2d7a36749e3dd6fcacfdfb0829a4346a24fd97dbc01eb48829bb5d50dac00aef7f5c043c7603dffc9d25082a47af716715b76229a7b6f3d0
+DIST dictionary-1.10.tar.gz 33332 SHA256 9a8e0111590b09d3587f790ed1cd6d117bf82887cb10135be93af3e1e8e5ea60 SHA512 7f5ec0e023ea2ab3f42fbf9200c1ac86cbcb330c14d2fce791f65cdce010d7e6a6c72e0589769dd94fe3c3d7543b730aacfb373e496933caccf8542224bfa356 WHIRLPOOL bd1d2efad94679981de38b3e14497c256d4bfe23a532e16e6457c89aa1a27e5ffe68433e50647cc42c6090d4f15f9fd6616f38c3819a4fbe8f3718bfa93d10d2
 DIST dictionary-1.8.7.tar.gz 32764 SHA256 c2b6445df24d9e105e5e6dcad03de1d5fe93c44b39408142d118245771ce4432 SHA512 29bba42bc8996430696e74dd3490e748c58fed19c87dbf40e1ffe73b85ace6998fc9fc20562626be127219bf274be49de6fb5cf5b0a3c64f0e7c66a963ecca76 WHIRLPOOL bc5754db222449046019adf0d7887935ea95329cdfdd67f827914c816c78c2f3f39c5cb390a114de2ce08871a716417d86d56b9da77f53f4402d594f67cf4431
+EBUILD dictionary-1.10.ebuild 578 SHA256 99ef4da86d48de572a7d6a99526e9850473834200c3218360c30fb112539c073 SHA512 1e3f36b4c4d9bcf511799d975d4e7272ec6eb36e7d05cc36e2d5a4a471c8a33edd09348216cae29527aaf3371c35b05986a89d57de7f539b0fb26b179cf4f388 WHIRLPOOL 2f98cd5335a73ed7a301d73470b5e7a3adea3e48addcd9089955d30854a5f35996dc03709fca49222ce32ff072a0c3505e785c7ff8b7a9eacd9190283efd28f8
 EBUILD dictionary-1.8.7.ebuild 592 SHA256 7e9028f1ed78eb60a52b6d1a9b2cfba0aeaf25cdba50ba5e2f67df01f22c94ea SHA512 ede08272f3f65354831de11bc7d214fff9928c3c9e2c2201587253202325d115c74d36c6564641bb94e766417fea7030b3284d4305cc65dff4d6d54d8add1062 WHIRLPOOL aec1b95852c6cfa1d4086d94e70337c16b9bcc53bfd39230360a69883cb9bfb3a2294c6bed53f3ca1c8c89fce8248129527525510e38929656cf163f6f26b5dd
-MISC ChangeLog 1523 SHA256 ee98efe86a101968d3557973c9e778ed11d1e303fcf4cf102ae43be130938b5c SHA512 5b8abc1b1ca1d71916b886cd453b90e2d1b4bd407fc5dc1bd5d89f453b935656c6f8930d3966f5022fc93deca871c187c84bcec01f8e463118a4034c54836b76 WHIRLPOOL 8ae6f879ee3d765de7c471072834fb6521a631d42469ef0f7955f587edca956adabbbe8f90d734b4330df247b31ee83131332ece846cb9dfcf468be7b1928a57
+MISC ChangeLog 1680 SHA256 ec3af7a0ca777a05073e8a9577ac678983e1e2995fa045dad18f1de0f3863e49 SHA512 3cd5d9dd2515a526715c4f97e5f4ddd85b5a6e6ca9cdcade307e9197d5aa807737df2c32d8586c96d44f66c192f0275d5a5dcf1745817e11d34b7e51a8a95d08 WHIRLPOOL ce964dcbea793dfafd21cc8b79d269413600889bde880c07c1ba6cf362b384573fd11eafbfb5b15b7281374e5d16bb372fc4eb4c400169099b581d74cc1b4197
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9exoAAoJEDxpGckxwJCBLH8P/RB5YRDqnILmF+hvMntx4Lj3
-1MjVsvRt79B8AJkwAHWhJ+kf/uIk0H7jMb2u5308Lnz4rnxdBGFXXuWhR3cZC/QU
-0pQUQhHLyehE3A6xxvlfdeQj7y7iZIT8e7+xdchm2xl+UcsbEQ37N6OLEKaLVM8J
-xdrzvn/7iaX0+u5Hvf/gQB6z+bkBwh6woDFr0/W7RkKCois14aKogZqx8Dtik6kE
-MIikGmTwayPvP8Zx1aM7pW90x0z2utGbIGFQREtqKnXVUfrbTejBsgDwQ+uEFQNj
-cdCYxFP4uVQ9pnASiJh8g2JqCqyiv4xu4aJo0XImhkZVLorhELeKtQi/sIV75k36
-nrdgqHXA2JaV2R5MwMYXJUCs0dPekX9GktzNrzv8255Mw3EqW+653EZOwQYzxgix
-R/OIl/XYNMuhOxdf79I9FOLoKtp1UKsvEa6pclT/gFXGGBbFaPxLoIayrTx6exOJ
-KGyutBM3Snu6F1wLGA0ccXiShwOYHPI15ICrwwKh3clsCjdlTRW9y1Cs7KkVFLrL
-bJ5NpPH1NzZFDINTAJ+YmlyJhSo44LjUz1Nefx3XDdy+zaonfn1ZC2CSUvr+Es0O
-mz9OIFx12iO/GzKB47KSzPjZ8065Kczk2xqbvaYVSYO+JpaL5UfOxR+21kLSN57e
-HmrXB1/thA0X5+jOq2Uw
-=fpBa
+iQGcBAEBCAAGBQJTA+0XAAoJEJQzkH1pP7W4u8gL/jqrONzBrL8s0wiqzS+xrBSg
+vQPVDS84ARLNfzF56pGSjmmRDBvATEFnmC+OSz86oIEA58ZqYbGiQOWIegFDtZ+C
+QchZlfwPO2RBb/RcymwjMpOB4s0u/TGTvmmsdVT5E2OXHzHiOdCbMDi7cjbrX08l
+L0JKvRPVMGTAHi49HzekctoPfPJ1cEZ9WM+XozcMcokXXLm8pRE+6+hZRVfXNkZx
+hvbijT9dVWGkvWP3ogYBYn9hK3f61q2y5DywNc+aG7JlBZPOtD2qQJHRcpJHJIzj
+CU6JbWO9mOOGKwh02YMiJTdOpr1goe5iQxGL5Nv27c4fgDDGiL2v9mipFOtR3nTU
+Gln1cXuT1ACLJkms6gD9JSG3ynZGCrINHbXEQXumnIHHgf847H4fDWnaHEYA1Vip
+iVKk7BW90ba6ksNW8ZYHBYvTkMIIY2tBObT4wWm3lnoWV5pqBZ92f/SBvCsCOCs/
+p1S+VAGuwSTJtPnLHf/sdeh4H2WXKCSKeL1qERYi/w==
+=9Vpl
 -----END PGP SIGNATURE-----
