@@ -1,0 +1,2 @@
+(add-to-list 'load-path "@SITELISP@")
+(load "dictionary-init")
