@@ -1,25 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 50qwerty-gentoo.el 140 SHA256 6f22b9cbce1a54e5ea75657f3681aeaee74c535d2b35907b68a6ef062a122137 SHA512 5b4b0c39324d68769698a83000e7c291a685f3b0c0118ef238557674d56075df45714aab28c662bcc5e487ae1438639ab310bb21c1b6def7aa617aa6ac406c82 WHIRLPOOL 36fdb989129ad8b74b1489e6acee49ef1a2ae8415a1db4d03d4d7e3c8cf7d45cde1c2ba24884eb973effee4c345b3042a0cd07fdc1855072e383449aeab0acc9
 DIST qwerty-1.1.tar.gz 3629 SHA256 e420815acb8bea40e2cfac7f241b275bd131e5079abdf9e0164872bffaef6a7d SHA512 1e808f758c2db054a1ae9fbfd961a1ca279226738d2cfcfc640e1613814469320dba75a2b6be00641403ce165e0fd02da04b791928979506deb8ef98cb9b9ada WHIRLPOOL 5cb0feed5d84f530691e5f0da78373005a81947802df1f592401eb1d186511ff9ae8a59754031dbc0b356634b44228e46fd2f5871724523f517f9ecfd6b71e25
-EBUILD qwerty-1.1.ebuild 596 SHA256 519e4e075321619989252488214e16530068feea7008c3520ea9599d993ef1b9 SHA512 d459d7f797a2e6fc76b5442b2c8ebfb3ed758e178b4188a702ba93b87f5bfdf19597cca15ce375d2d446845fd6325024a744a0d1ec5863529c561653a80176db WHIRLPOOL 402fc84c74fda1f1b484cc15623b9be6c4f84065881508b05d26e8264b84ee9983328c134113fe7557c50a5eff8ae7f36152920db686b3f68f356e2bb0c31b41
-MISC ChangeLog 1337 SHA256 b5f8e31ae0ae2ac5a5b8c52913155a0668a75cb8436e8408c993b62b69d321bc SHA512 ec0f9f0b17b224114e6da6304184151c40e4b864406822732e66e61df4cf09fe111e400124ffd1dcfa72b7bc7c91ceae6415213ccdce3e159abbb4604a8aea1f WHIRLPOOL 26cc32012f192d03c77f02ac98cdf8b6637bb6c3e28a62e6ecf079dc49d08e3ca09eaa266fc4e22204a3f5125fe1a54ea01b863732fda1d0c14a91f6713586f2
+EBUILD qwerty-1.1.ebuild 596 SHA256 04a85b56b0af835f96727e0e1b4c613d80ea1515f0f8de98245ac0d77109572c SHA512 12d9cdd4790586f9028634ac52a5eac21fbd83b74cb705fb1659812a85a6751de2acd83a00db8dbcfcb30bca0db3f3fab5c0999f4ee2c8dcb44fcebebebfbbb4 WHIRLPOOL 3aa0a91dfee36af6a689eb1944165b937b5c38c76327e049d46b566db23310d7dc5ce492d319a992d810bd8201afe86e2457cc7d4142700fc91b47789afae4f3
+MISC ChangeLog 1463 SHA256 bc1ee516a1ff91c9abe9fe8528e5961d5fe9636dd6c67e5fc984f94d2ad88ddb SHA512 64df721de03e58e2b69d2f68b051ede429bf0369140c618dc5b9fbf28e32db3f4503132f2d0b87bf61d2ab7817dfd4de846a2843c7b0d74620836e3f3fac7378 WHIRLPOOL c05bd7764ca25c11c9a53e8aafa163e3ee385b38bcf945c32d9909cd99c4e9a884bc8918bf7a692afb2209f0b910ff8bbb94ab60fce518e34646d914e2976659
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fOrAAoJEDxpGckxwJCBvjUP+gLZf+aCCiM6P4UhqSP7Ungr
-3IPdPymYF/UllTGqyi5Te6pVLlaEOBbfRcLaN5Yfji8KZ0YIfeIe/vQrEqcmQT8D
-l1NBYrAyPI/L30DCqQz5SYhlF1b3tsHSfJvRBY0Jexh5SUdKri2PiY5mDwwsKns3
-tJx6oJMW8wN8l+ieaAfxrQor6pjaw6wHtIB5kIgl83OxJuEjVuow9IAhxupMfwQ7
-zq/yu7sT30XFUKcHpj/D1I86vO+NQGpzONqAifZ9u1ZHwCY3zY0BKCNpa1BthZoc
-GT2EpemqkF+QhXF9D0VRNj1t0j10GuFhVyF90JW57Q/5LKTEK/YiwP40qEdxhW6n
-G3NdMiDR4zpVw+40HAEJRcN44cGxhmTZkwTSXToCCv/gk/31h/iuUqcOUUYM0GfI
-VVHDZOpXDV46Ssas6cxinuOoHAZKaUFLMm0FDikPOr4WilUV+pZm6ohC9s7b2r75
-WEis8ZhqQ1QuLoT/mhjpdwFU96P4Rx6ByfbEvEI2+EyNxD+ObzhUOaDmMIwfNuBi
-WMCgB7zlGl5a6dyaOYQhN/LcYqvmkjdCeIEQuhSiEaQ9fIvcHaf24APKVbkyyIZk
-Bi9r7KNIP15zSLivTWxEDouT8IJxpmnRSHIReihoHO0OpecTn5D2Wztwmbk8O4uZ
-F9iJb7a2/1mslNyty6Vq
-=6Ji/
+iQGcBAEBCAAGBQJTA+dkAAoJEJQzkH1pP7W4tcEL/jEAJWVCQFMl4+j7K/g4FVWY
+lr36hKJCyjPy0LQz8dk7kA9Y2dxt0ZV+wl9er3Z+5RxN2IgJ8Hbbmro8MMtiElbn
+EoyfeaTIoOihFd4wUYUBwv/+nhKeF8TU88LKdd1tzNckFL5m07gW0+DiCy4J1lrw
+B7qrX4rsZ5cRotxQvpMq1r3cbNByggdhrR+JFT/l4uLmXvK0cmTOtr1hTNfAxbLB
+RBVdrGdXlpa9d2zv9JZhCiLrFr0BCF9oFVlW6aqHj4ZNQn8ct3BeMOeCWvoMU2vc
+2zPKqzjIVtTJ1B89QzaFstmYBE7Pox5CCAu4/tf/4jmk44NzPbZ/HIiAGIE8kP5T
+Ecijn3yDx/9KtCgFu9pQoWEzglhF4WORmCSnE/LyyITP8WeARLkGSgQwW5V/UEig
+CcPGjus6xaAe/EwRd33kkMoAJtv0D7BVxue++oh+Km5m+wTjlTR7DhPpdLOQIGWg
+JzA2IOLvgYPzvOYUqOL3USYmlRh25HICNPp3LDVQ5A==
+=lFVn
 -----END PGP SIGNATURE-----
