@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
 DEPEND=>=virtual/emacs-21
-DESCRIPTION=Switch between QWERTY and DVORAK without changing the console keymap
+DESCRIPTION=Emacs package for talking to a dictionary server
 EAPI=5
-HOMEPAGE=http://groups.google.com/group/gnu.emacs.sources/msg/eab31c752dfdd3a5
-KEYWORDS=amd64 ppc x86
-LICENSE=GPL-1+
+HOMEPAGE=http://www.myrkr.in-berlin.de/dictionary/index.html
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2+
 RDEPEND=>=virtual/emacs-21
 SLOT=0
-SRC_URI=mirror://gentoo/qwerty-1.1.tar.gz
+SRC_URI=http://www.myrkr.in-berlin.de/dictionary/dictionary-1.10.tar.gz
 _eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=dff331d2326d5330fe521fa6d7ef2c26
+_md5_=03664ccd26a5ce132947956ef1d43e70
