@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/dictionary
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/dictionary/ChangeLog,v 1.13 2007/12/14 05:25:08 opfer Exp $
+# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/dictionary/ChangeLog,v 1.14 2014/02/18 23:30:12 ulm Exp $
+
+*dictionary-1.10 (18 Feb 2014)
+
+  18 Feb 2014; Ulrich Müller <ulm@gentoo.org> +dictionary-1.10.ebuild,
+  +files/50dictionary-gentoo-1.10.el:
+  Version bump.
 
   14 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
   dictionary-1.8.7.ebuild:
